Column z-index fix

--- a/_cubworld_styles.css
+++ b/_cubworld_styles.css
@@ -17,7 +17,7 @@ body {
 	margin-top: -10px;
 	*/
 	position:relative;
-	z-index: 100;
+	z-index: 99;
 }
 
 #mainContentArea {
